--- a/html/static/css/base.css
+++ b/html/static/css/base.css
@@ -202,7 +202,17 @@ hr {
 	text-shadow: none;
 	background: #ddd;
 }
-::-webkit-scrollbar {display:none; width: 8px; height: 8px; border: 3px solid #fff;}
-::-webkit-scrollbar-button:start:decrement, ::-webkit-scrollbar-button:end:increment {display: block; height: 10px; background: #efefef;}
-::-webkit-scrollbar-track {background: #efefef; -webkit-border-radius: 10px; border-radius:10px; -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,.5)}
-::-webkit-scrollbar-thumb {height: 50px; width: 50px; background: rgba(0,0,0,.6); -webkit-border-radius: 8px; border-radius: 8px; -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,.1)}
+::-webkit-scrollbar {display:none; width: 8px; height: 8px;}
+::-webkit-scrollbar-button:start:decrement, ::-webkit-scrollbar-button:end:increment {display: none; height: 10px; background:#fff;}
+::-webkit-scrollbar-track {background: #f1f1f1; -webkit-border-radius: 0; border-radius:0; -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0);}
+::-webkit-scrollbar-thumb {height: 50px; width: 50px; background:#660d98; -webkit-border-radius: 0; border-radius: 0; -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0);}
+
+html {
+	scrollbar-arrow-color:#f1f1f1;
+	scrollbar-3dlight-color:#f1f1f1; 
+	scrollbar-darkshadow-color:#f1f1f1; 
+	scrollbar-face-color:#660d98; 
+	scrollbar-hightlight-color:#f1f1f1; 
+	scrollbar-shadow-color:#f1f1f1; 
+	scrollbar-track-color:#f1f1f1;
+}
