--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -6,7 +6,7 @@
 /*-----------------------------------------------------------------*/
 
 html, body {width:100%; height:100%;}
-html {font-size:62.5%;}
+html {font-size:62.5%; -webkit-text-size-adjust:none;}
 body {font:400 1.4em 'NanumSquare', '맑은 고딕', '나눔 고딕', sans-serif; vertical-align:middle; min-width:320px; color: #000; letter-spacing: -0.7px; overflow:hidden; overflow-y:scroll;   -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: auto;}
 em, b, span, p, strong {word-break:keep-all; white-space:normal; word-wrap:break-word; overflow-wrap:break-word;}
 button, input, select {font:inherit;}
@@ -876,7 +876,7 @@ footer .copy span {font-size:1.4rem; color:#666; line-height:1; transform:rotate
 
 .introduce .activities {margin-top:30px;}
 .introduce .activities > li {background-color:#fff; padding:0; height:405px;}
-.introduce .activities > li + li {margin-top:20px;}
+.introduce .activities > li + li {margin-top:70px;}
 .introduce .activities > li > div {width:50%; height:100%; position:relative;}
 .introduce .activities > li:nth-of-type(odd) > div {float:right;}
 .introduce .activities > li:nth-of-type(even) > div {float:left;}
@@ -1352,10 +1352,10 @@ dl.table dd {display:table-cell; width:auto;}
 	-ms-transform: none;
 }
 .fadeInUp {
-	transform: translate3d(0, 50%, 0);
-	-webkit-transform: translate3d(0, 50%, 0);
-	-moz-transform: translate3d(0, 50%, 0);
-	-ms-transform: translate3d(0, 50%, 0);
+	transform: translate3d(0, 65%, 0);
+	-webkit-transform: translate3d(0, 65%, 0);
+	-moz-transform: translate3d(0, 65%, 0);
+	-ms-transform: translate3d(0, 65%, 0);
 }
 .fadeInUp_row {
 	transform: translate3d(0, 100px, 0);
@@ -1364,16 +1364,16 @@ dl.table dd {display:table-cell; width:auto;}
 	-ms-transform: translate3d(0, 100px, 0);
 }
 .fadeInUp_ {
-	transform: translate3d(0, 15px, 0);
-	-webkit-transform: translate3d(0, 15px, 0);
-	-moz-transform: translate3d(0, 15px, 0);
-	-ms-transform: translate3d(0, 15px, 0);
+	transform: translate3d(0, 20px, 0);
+	-webkit-transform: translate3d(0, 20px, 0);
+	-moz-transform: translate3d(0, 20px, 0);
+	-ms-transform: translate3d(0, 20px, 0);
 }
 .fadeInDown {
-	transform: translate3d(0, -15px, 0);
-	-webkit-transform: translate3d(0, -15px, 0);
-	-moz-transform: translate3d(0, -15px, 0);
-	-ms-transform: translate3d(0, -15px, 0);
+	transform: translate3d(0, -20px, 0);
+	-webkit-transform: translate3d(0, -20px, 0);
+	-moz-transform: translate3d(0, -20px, 0);
+	-ms-transform: translate3d(0, -20px, 0);
 }
 .fadeInRight {
 	transform: translate3d(-50%, 0, 0);
