--- a/html/static/css/style_m.css
+++ b/html/static/css/style_m.css
@@ -610,6 +610,7 @@ header .menu-all > div .category > ul > li > a {font-size:3.2rem;}
 	.introduce .training li + li {margin-left:20px;}
 	.introduce .training li + li:before {left:-15px; margin-top:-7px; width:12px; height:12px; background-position:-69px center; background-size:80px auto;}
 	.introduce .activities > li {padding:30px 0;}
+	.introduce .activities > li + li {margin-top:40px;}
 	.introduce .activities .img-cts {padding:0 20px;}
 	.introduce .activities .txt-cts {margin-top:30px; padding:0 20px;}
 	.introduce .business-support > li {padding:30px 0;}
